--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="../style.css" type="text/css" rel="stylesheet" />
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
    <h1>Discover hidden places in the world around you</h1>
    <a href="https://j9p0mkvv2n0ktkujmj9555jv5mvora6i27capu52k18kjbhi6meg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+   <video src="./resources/videos/excursion.mp4" loop mute autoplay></video>
+   <h2>Your personal travel guide</h2>
   </body>
 </html>
