--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
    <a href="https://j9p0mkvv2n0ktkujmj9555jv5mvora6i27capu52k18kjbhi6meg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
    <video src="./resources/videos/excursion.mp4" loop mute autoplay></video>
    <h2>Your personal travel guide</h2>
+   <p>Excursion remembers places you like, and recommends new points of interst around you</p>
+   <img src="./resources/images/camp.jpg" alt="Camp" />
+   <img src="./resources/images/phone.png" alt="phone" />
+   <h2>Coming Soon for iPhone and Android</h2>
   </body>
 </html>
