--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
    <img src="./resources/images/camp.jpg" alt="Camp" />
    <img src="./resources/images/phone.png" alt="phone" />
    <h2>Coming Soon for iPhone and Android</h2>
+   <a href="https://fqg2vf47v45hu8mpg4o8netcpacnno8t372mr8rs39et4vujk5lg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+   <p>© Excurison</p>
   </body>
 </html>
