--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+
+<!-- Header -->
+
    <h1>Discover hidden places in the world around you</h1>
    <a href="https://j9p0mkvv2n0ktkujmj9555jv5mvora6i27capu52k18kjbhi6meg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+
+<!-- Video -->
+
    <video src="./resources/videos/excursion.mp4" loop mute autoplay></video>
+
+<!-- Info -->
+
    <h2>Your personal travel guide</h2>
    <p>Excursion remembers places you like, and recommends new points of interst around you</p>
    <img src="./resources/images/camp.jpg" alt="Camp" />
    <img src="./resources/images/phone.png" alt="phone" />
+
+<!-- footer -->
+
    <h2>Coming Soon for iPhone and Android</h2>
    <a href="https://fqg2vf47v45hu8mpg4o8netcpacnno8t372mr8rs39et4vujk5lg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
    <p>© Excurison</p>
