cleaned up code

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 <!-- Header -->
 
+<div>
    <h1>Discover hidden places in the world around you</h1>
-   <a href="https://j9p0mkvv2n0ktkujmj9555jv5mvora6i27capu52k18kjbhi6meg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
-
-<!-- Video -->
-
+  <p><a href="https://j9p0mkvv2n0ktkujmj9555jv5mvora6i27capu52k18kjbhi6meg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a></p>
    <video src="./resources/videos/excursion.mp4" loop mute autoplay></video>
+</div>
 
 <!-- Info -->
 
