--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <!-- Info -->
 
    <h2>Your personal travel guide</h2>
-   <p>Excursion remembers places you like, and recommends new points of interst around you</p>
+   <p class="p">Excursion remembers places you like, and recommends new points of interst around you</p>
    <img src="./resources/images/camp.jpg" alt="Camp" />
-   <img src="./resources/images/phone.png" alt="phone" />
-
+  <p>
+    <img src="./resources/images/phone.png" alt="phone" />
+  </p>
 <!-- footer -->
 
    <h2>Coming Soon for iPhone and Android</h2>
    <a href="https://fqg2vf47v45hu8mpg4o8netcpacnno8t372mr8rs39et4vujk5lg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
-   <p>© Excurison</p>
+   <p class="copyright">© Excurison</p>
   </body>
 </html>
